# MY_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_FRAMEWORK.md  Python_AI开发工程师技能文档.md  README.md  heart.py  pyproject.toml  requirements-dev.txt  requirements.txt  写一个.py  景尔妮_AI大模型工程师简历.docx  景尔妮_AI大模型工程师简历.md  景尔妮_AI大模型工程师简历_优化版.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: logging.yaml  mcp_servers.yaml  proxy_config.json
docs/: PROXY_GUI.md  README.md
scripts/: lint.sh  setup.sh  setup_conda.bat  setup_conda.sh  start_gui.bat  start_proxy.bat  start_yeanc.bat  test.sh  test_multi_model.py
skills/: README.md
skills/api-doc/: SKILL.md
skills/bug-hunt/: SKILL.md
skills/code-review/: SKILL.md
skills/example_skill/: SKILL.md
skills/refactor/: SKILL.md
skills/repo-docs-resume/: SKILL.md
skills/test-gen/: SKILL.md
src/: __init__.py
src/agents/: __init__.py  debate.py  graph.py  orchestrator.py  tool_using_agent.py  visualization.py
src/api/: __init__.py  app.py
src/cli/: __init__.py  main.py
src/compression/: __init__.py  loop.py  serializer.py
src/config/: __init__.py  schemas.py  settings.py
src/core/: __init__.py  agent.py  exceptions.py  llm.py  loop.py  session_manager.py  state.py  task_store.py  token_tracker.py
src/gui/: __init__.py  proxy_gui.py
src/harness/: __init__.py  engine.py  memory.py  tools.py
src/indexing/: __init__.py  context_injector.py  hybrid.py
src/memory/: __init__.py  consolidation.py
src/middleware/: __init__.py  base.py  hooks.py  registry.py
test/: heart.py  star.py
tests/: conftest.py
(+74 files in other folders)
